# ai-detection-research

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: raw_results.jsonl
notebooks/: analysis.ipynb
prompts/: taxonomy.yaml  winning_prompts.md
src/: __main__.py  analysis.py  config.py  detector_client.py  experiment_runner.py  gemini_client.py  prompt_registry.py
tests/: test_analysis.py  test_detector_client.py  test_experiment_runner.py  test_gemini_client.py  test_prompt_registry.py
